--- a/src/components/ArtistDetails.css
+++ b/src/components/ArtistDetails.css
@@ -14,12 +14,14 @@
       font-size: 3rem;
       margin-bottom: 3rem;
       color: white;
+      padding: 2rem 0 2rem 0;
     }
 
     h3{
       font-size: 1rem;
       margin-bottom: 2rem;
       color: gray;
+      padding: 0.5rem 2rem 0.5rem 2rem;
     }
 }
 
