--- a/src/components/ArtistDetails.css
+++ b/src/components/ArtistDetails.css
@@ -18,7 +18,7 @@
     }
 
     h3{
-      font-size: 1rem;
+      font-size: 1.5rem;
       margin-bottom: 2rem;
       color: gray;
       padding: 0.5rem 2rem 0.5rem 2rem;
@@ -35,10 +35,32 @@
   .album-grid {
       grid-template-columns: repeat(2, 1fr);
   }
+  .details {
+      h2{
+        font-size: 2rem;
+        padding: 1.5rem 0 1.5rem 0;
+      }
+  
+      h3{
+        font-size: 1rem;
+        padding: 0.5rem 1rem 0.5rem 1rem;
+      }
+  }
 }
 
 @media (max-width: 767px) {
   .album-grid {
       grid-template-columns: 1fr;
   }
+  .details {
+    h2{
+      font-size: 1.5rem;
+      padding: 2rem 0 0 0;
+    }
+
+    h3{
+      font-size: 1rem;
+      padding: 0.5rem 1rem 0.5rem 1rem;
+    }
+}
 }
