--- a/src/App.css
+++ b/src/App.css
@@ -18,4 +18,10 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  background-color: black;
+}
+
+h1 {
+  color: white;
+  margin: 2rem;
 }
