--- a/src/components/ArtistDetails.css
+++ b/src/components/ArtistDetails.css
@@ -17,6 +17,11 @@
       padding: 2rem 0 2rem 0;
     }
 
+    .banner {
+      width: 100%;
+      height: 100%;
+    }
+
     h3{
       font-size: 1.5rem;
       margin-bottom: 2rem;
